removed : and added - for title

--- a/MiraiConsultMVC/Views/Doctors/doctorsPublicProfile.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/doctorsPublicProfile.cshtml
@@ -374,7 +374,7 @@
             <meta name="description" content="Dr. @(Model.FirstName + " " + Model.LastName)">
         }
     @section tileTags {
-            <title>Mirai Consult : doctor : Dr. @(Model.FirstName + " " + Model.LastName) </title>
+            <title>Mirai Consult-doctor-@(Model.FirstName + " " + Model.LastName) </title>
     }
     
     <script src="~/Content/js/utility.js"></script>
