--- a/MiraiConsultMVC/Views/Home/topicdetails.cshtml
+++ b/MiraiConsultMVC/Views/Home/topicdetails.cshtml
@@ -119,7 +119,7 @@
         }
     
          @section tileTags {
-            <title>Mirai Consult : @ViewBag.tag </title>
+            <title>Mirai Consult-@ViewBag.tag </title>
         }
         <script type="text/javascript" src="~/Content/js/utility.js"></script>
         <script type="text/javascript">
