--- a/MiraiConsultMVC/Views/Patients/PatientQuestionDetails.cshtml
+++ b/MiraiConsultMVC/Views/Patients/PatientQuestionDetails.cshtml
@@ -239,7 +239,7 @@
     <meta property="og:type" content="website" />
 }
 @section tileTags {
-    <title>Mirai Consult : @ViewBag.QuestionText </title>
+    <title>Mirai Consult-@ViewBag.QuestionText </title>
 }
 <div class="modal hide" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
