--- a/MiraiConsultMVC/Views/Home/topicdetails.cshtml
+++ b/MiraiConsultMVC/Views/Home/topicdetails.cshtml
@@ -115,6 +115,7 @@
             </div>
         </div>
         @section metatags {
+            <meta name="title" content="@ViewBag.tag">
             <meta name="description" content="@ViewBag.tag">
         }
     
