--- a/MiraiConsultMVC/Views/Patients/PatientQuestionDetails.cshtml
+++ b/MiraiConsultMVC/Views/Patients/PatientQuestionDetails.cshtml
@@ -231,6 +231,7 @@
     </div>
 </div>
 @section metatags {
+    <meta name="title" content="@ViewBag.QuestionText">
     <meta name="description" content="@ViewBag.QuestionText">
     <meta property="og:title" content="@ViewBag.metatitle" />
     <meta property="og:url" content="@ViewBag.metaUrl">
