--- a/MiraiConsultMVC/Views/Doctors/doctorsPublicProfile.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/doctorsPublicProfile.cshtml
@@ -155,7 +155,7 @@
                                         }
                                         count++;
                                     }
-                                    @if(Model.locations.Count > 0 && ((Model.specialities != null && Model.specialities.Count > 0) || (Model.details != null && Model.details.Count > 0)))
+                                    @if (Model.locations.Count > 0 && ((Model.specialities != null && Model.specialities.Count > 0) || (Model.qualification != null && Model.qualification.Count > 0) || (Model.details != null && Model.details.Where(x => x.Certification != null).Count() > 0)))
                                     { 
                                         <hr class="doc-details-hr" />
                                     }
@@ -274,7 +274,7 @@
                                         }
                                         count++;
                                     }
-                                    @if(Model.locations.Count > 0 && ((Model.specialities != null && Model.specialities.Count > 0) || (Model.details != null && Model.details.Count > 0)))
+                                    @if (Model.locations.Count > 0 && ((Model.specialities != null && Model.specialities.Count > 0) || (Model.qualification != null && Model.qualification.Count > 0) || (Model.details != null && Model.details.Where(x => x.Certification != null).Count() > 0)))
                                     { 
                                         <hr class="doc-details-hr" />
                                     }
@@ -283,7 +283,7 @@
                         </div>
                     </div>
                 }
-                @if ((Model.specialities != null && Model.specialities.Count > 0) || (Model.details != null && Model.details.Count > 0) || (Model.details != null && Model.details.Count > 0))
+                @if ((Model.specialities != null && Model.specialities.Count > 0) || (Model.qualification != null && Model.qualification.Count > 0) || (Model.details != null && Model.details.Where(x => x.Certification != null).Count() > 0))
                 {
                     <div class="row-fluid hidden-phone">
                         <div class="span2 hidden-phone">
